--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ DISCORD_BOT_TOKEN=
 
 # Replace with the URL of your Ollama API endpoint
 # Example: OLLAMA_API_URL=http://127.0.0.1:11434
-OLLAMA_API_URL=http://localhost:11434
+# but here we are using docker compose so it should be http://ollama:11434
+OLLAMA_API_URL=http://ollama:11434
 
 # --- Word Replacements (Case-Insensitive) ---
 # Define word pairs for replacement in the bot's responses. The replacement ignores case (uppercase/lowercase).
